[package]
name = "api"
version = "0.1.0"
authors = ["Lay Nath"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "api"

[dependencies]
actix-web = "3.2.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-cors = "0.4.1"
log = "0.4.11"
env_logger = "0.7.1"
diesel_migrations = "1.4.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
dotenv = "0.15.0"
futures = "0.3.6"
failure = "0.1.8"
derive_more = "0.99.11"
jsonwebtoken = "7.2.0"
bcrypt = "0.8.2"
substrate-subxt = { path = "../subxt" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-runtime = { git = "https://github.com/selendra/indracore", branch = "main" }
pallet-indices = { git = "https://github.com/selendra/indracore", branch = "main" }
hex-literal = "0.3.1"

[dependencies.diesel]
version = "1.4.4"
features = ["postgres", "r2d2", "uuid", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.6.5"
features = ["serde", "v4"]
