[package]
name = "cli"
version = "2.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/indracore"

[dependencies]
env_logger = "0.7.1"
indracore-api = { path = "../indracore_api"}
colour = "0.5.0"
async-std = { version = "1.6.4", features = ["attributes"] }