[package]
name = "http_service"
version = "0.1.0"
authors = ["Saing Sab <saing.sab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "sevice"

[dependencies]
actix-web = "3.3.2"
cli = { path = "../cli"}
derive_more = "0.99.11"