[package]
name = "indracore-api"
version = "2.0.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/indracore"

[dependencies]
substrate-subxt = {path = "../subxt"}
ink_metadata = { version = "3.0.0-rc2" }
scale = { package = "parity-scale-codec", version = "1.3.4" }
sp-keyring = {  git = "https://github.com/selendra/indracore", branch = "main", version = "2.0.0", package = "sp-keyring" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main",  version = "2.0.0", package = "sp-core" }
pallet-indices= {  git = "https://github.com/selendra/indracore", branch = "main", version = "2.0.0" }
sp-rpc = {  git = "https://github.com/selendra/indracore", branch = "main", version = "2.0.0" }

async-std = { version = "1.6.4", features = ["attributes"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"]}
serde = { version = "1.0.115", default-features = false, features = ["derive"] }

serde_json = "1.0.57"
escape8259 = "0.5.0"
thiserror = "1.0.20"
itertools = "0.9.0"
jsonrpsee = "0.1.0"
indexmap = "1.6.0"
dotenv = "0.15.0"
anyhow = "1.0.32"
log = "0.4.11"
nom = "6.0.0"
hex = "0.4.2" 