[package]
name = "operation"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/selendra-client"

[[bin]]
path = "src/main.rs"
name = "operation"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
env_logger = "0.7.1"
cli = { path = "../cli" }
async-std = { version = "1.6.4", features = ["attributes"] }