[package]
name = "subkey"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"
homepage = "https://selendra.org"
repository = "https://github.com/selendra/indra-api-client"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "subkey"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.14"
sc-cli = { git = "https://github.com/selendra/indracore", branch = "main" }
node-runtime = { package = "node-indracore-runtime", git = "https://github.com/selendra/indracore", branch = "main" }
node-primitives = { git = "https://github.com/selendra/indracore", branch = "main" }
substrate-frame-cli = { git = "https://github.com/selendra/indracore", branch = "main" }
frame-system = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main" }
