[package]
name = "substrate-subxt"
version = "0.13.0"
authors = [""]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["substrate-subxt-client"]

# enable this feature to run tests which require a local dev chain node
integration-tests = []

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }

frame-metadata = { git = "https://github.com/selendra/indracore", branch = "main" }
frame-support = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-runtime = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-version = { git = "https://github.com/selendra/indracore", branch = "main" }
pallet-indices = { git = "https://github.com/selendra/indracore", branch = "main" }
hex = "0.4.2"
sp-std = "2.0.0"
application-crypto = { git = "https://github.com/selendra/indracore", branch = "main", package = "sp-application-crypto"}
sp-finality-grandpa = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-consensus-babe = { git = "https://github.com/selendra/indracore", branch = "main" }
pallet-im-online = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-authority-discovery = {  git = "https://github.com/selendra/indracore", branch = "main" }
pallet-staking = { git = "https://github.com/selendra/indracore", branch = "main" }

sp-rpc = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main" }
sc-rpc-api = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-transaction-pool = { git = "https://github.com/selendra/indracore", branch = "main" }
substrate-subxt-client = { version = "0.5.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.13.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
frame-system = {  git = "https://github.com/selendra/indracore", branch = "main" }
pallet-balances = {  git = "https://github.com/selendra/indracore", branch = "main" }
sp-keyring = { git = "https://github.com/selendra/indracore", branch = "main" }
substrate-subxt-client = { version = "0.5.0", path = "client" }
tempdir = "0.3.7"
wabt = "0.10.0"
assert_matches = "1.3"
