[package]
name = "utils"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2018"

[dependencies]
substrate-subxt = { path = "../subxt" }
sp-core = { git = "https://github.com/selendra/indracore", branch = "main" }
sp-runtime = { git = "https://github.com/selendra/indracore", branch = "main" }
pallet-indices = { git = "https://github.com/selendra/indracore", branch = "main" }
colour = "0.5.0"
dotenv = "0.15.0"