[package]
name = "substrate-subxt-client"
version = "0.5.0"
authors = ["David Craven <david@craven.ch>", "Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-std = "1.6.4"
futures = { version = "0.3.5", features = ["compat"] }
futures01 = { package = "futures", version = "0.1.29" }
jsonrpsee = "0.1.0"
log = "0.4.11"
sc-network = { git = "https://github.com/selendra/indracore", branch = "main" }
sc-service = { git = "https://github.com/selendra/indracore", branch = "main" }
serde_json = "1.0.57"
sp-keyring = {git = "https://github.com/selendra/indracore", branch = "main"}
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
substrate-subxt = { path = ".." }
tempdir = "0.3.7"
